change log

### 12.03.2018
- continued working on the previous task
    - finished config and time evolution init part

### 09.03.2018
- added a green function only flag which should do the following:
    1. perform the time evolution of the state vector to COM time in ONE step and normalize (maybe too much?)
    2. initialize the greater and lesser time evolution matrices with a different deltaT
        and raise it to an appropriate power for smaller difference time steps
    3. re-initialize the state time evolution operator for the smaller time step
    4. calculate the TRACE of the greater and lesser green function step by step

### 21.02.2018
- ffs the damn green function stuff was totally messed up...
    evolution matrices were conjugate, time steps were going in the exact
    greater annihilation was actually the creation operator!

### 04.01.2018
- added time-symmetric option for dft (only forward dft up to now)

### 03.01.2018
- changed arange(self.dim, 1) to arange(self.dim) in order to produce a correct array... stepsize 1 is automatic

### 02.01.2018
- happy new year
- added occendiag to store the diagonal in energy basis (weighted and unweighted matrix elements)
- added occendiag to plot the diagonal in energy basis (weighted and unweighted matrix elements)
- also removed the old diagonal expectation storage since it was irritating
- changed file for occupation operator matrix in energy basis from occ%i to occ_energynasis_%i
- slight overhaul of the whole energy basis calculation to be marginally more intuitive
- renamed diagexp to occendiagexp
- changed all range(0, n) to range(n)

### 18.12.2017
- changed all .txt to .dat !!!
- fixed green function finally
- changed init spec slightly to be more intuitive and safe
- changed spec plotting to be reasonable
- changed green function evaluation from multi_dot to nested dot - see if this is faster!

### 13.12.2017